# List the header files
set(HEADERS ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/BaseXMLParser.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Box.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Colour.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Colour.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Context.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ContextInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ConvolutionFilter.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Core.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Debug.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Decorator.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/DecoratorInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Dictionary.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Dictionary.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Element.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Element.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementDocument.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementInstancerGeneric.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementInstancerGeneric.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementReference.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementScroll.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementText.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ElementUtilities.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Event.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/EventInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/EventListener.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/EventListenerInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Factory.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/FileInterface.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Font.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/FontDatabase.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/FontEffect.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/FontEffectInstancer.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/FontGlyph.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Geometry.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/GeometryUtilities.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Header.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Input.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Log.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Math.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/MathTypes.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Platform.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Plugin.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Pool.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Property.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/PropertyDefinition.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/PropertyDictionary.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/PropertyParser.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/PropertySpecification.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ReferenceCountable.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/RenderInterface.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/ScriptInterface.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Stream.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StreamMemory.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/String.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StringBase.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StringBase.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StringUtilities.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StyleSheet.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StyleSheetKeywords.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/StyleSheetSpecification.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/SystemInterface.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Texture.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/TypeConverter.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/TypeConverter.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Types.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/URL.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Variant.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Variant.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Vector2.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Vector2.inl
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/Vertex.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/WString.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/XMLNodeHandler.h
            ${LIBROCKET_SOURCE_DIR}/Include/Rocket/Core/XMLParser.h
)

# List the source files
set(SRCS ${LIBROCKET_SOURCE_DIR}/Source/Core/BaseXMLParser.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Box.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Clock.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Clock.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Context.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ContextInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ContextInstancerDefault.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ContextInstancerDefault.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ConvolutionFilter.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Core.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DebugFont.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Decorator.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorNone.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorNone.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorNoneInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorNoneInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiled.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiled.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledBox.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledBox.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledBoxInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledBoxInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledHorizontal.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledHorizontal.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledHorizontalInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledHorizontalInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledImage.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledImage.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledImageInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledImageInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledVertical.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledVertical.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledVerticalInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DecoratorTiledVerticalInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Dictionary.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DocumentHeader.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/DocumentHeader.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Element.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementBackground.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementBackground.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementBorder.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementBorder.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementDecoration.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementDecoration.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementDefinition.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementDefinition.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementDocument.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementHandle.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementHandle.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementImage.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementImage.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementReference.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementScroll.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementStyle.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementStyle.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementStyleCache.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementStyleCache.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementText.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementTextDefault.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementTextDefault.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ElementUtilities.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Event.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventDispatcher.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventDispatcher.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventInstancerDefault.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventInstancerDefault.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventIterators.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/EventListenerInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Factory.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FileInterface.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FileInterfaceDefault.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FileInterfaceDefault.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontDatabase.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffect.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectNone.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectNone.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectNoneInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectNoneInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectOutline.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectOutline.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectOutlineInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectOutlineInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectShadow.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectShadow.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectShadowInstancer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontEffectShadowInstancer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFace.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFace.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFaceHandle.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFaceHandle.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFaceLayer.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFaceLayer.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFamily.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/FontFamily.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Geometry.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/GeometryDatabase.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/GeometryDatabase.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/GeometryUtilities.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutBlockBox.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutBlockBox.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutBlockBoxSpace.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutBlockBoxSpace.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutEngine.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutEngine.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutInlineBox.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutInlineBox.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutInlineBoxText.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutInlineBoxText.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutLineBox.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/LayoutLineBox.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Log.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Math.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Plugin.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PluginRegistry.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PluginRegistry.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Pool.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Pool.inl
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Property.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyDefinition.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyDictionary.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserColour.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserColour.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserKeyword.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserKeyword.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserNumber.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserNumber.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserString.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyParserString.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertyShorthandDefinition.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/PropertySpecification.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/ReferenceCountable.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/RenderInterface.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Stream.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StreamFile.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StreamFile.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StreamMemory.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/String.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StringCache.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StringCache.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StringUtilities.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheet.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetFactory.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetFactory.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNode.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNode.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelector.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelector.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorEmpty.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorEmpty.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorFirstChild.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorFirstChild.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorFirstOfType.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorFirstOfType.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorLastChild.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorLastChild.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorLastOfType.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorLastOfType.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthChild.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthChild.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthLastChild.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthLastChild.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthLastOfType.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthLastOfType.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthOfType.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorNthOfType.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorOnlyChild.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorOnlyChild.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorOnlyOfType.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetNodeSelectorOnlyOfType.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetParser.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetParser.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/StyleSheetSpecification.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/SystemInterface.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Template.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Template.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TemplateCache.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TemplateCache.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Texture.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureDatabase.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureDatabase.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayout.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayout.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutRectangle.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutRectangle.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutRow.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutRow.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutTexture.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureLayoutTexture.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureResource.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/TextureResource.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/URL.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/UnicodeRange.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/UnicodeRange.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Variant.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/Vector2.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/WString.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/WidgetSlider.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/WidgetSlider.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/WidgetSliderScroll.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/WidgetSliderScroll.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandler.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerBody.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerBody.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerDefault.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerDefault.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerHead.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerHead.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerTemplate.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLNodeHandlerTemplate.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLParseTools.cpp
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLParseTools.h
         ${LIBROCKET_SOURCE_DIR}/Source/Core/XMLParser.cpp
)

# List the include paths
set(INCLUDE_PATHS "${LIBROCKET_SOURCE_DIR}/Include")

include_directories(${INCLUDE_PATHS})

xmake_import_search_paths(FREETYPE)

# Declaration of the library
xmake_create_dynamic_library(ROCKETCORE RocketCore "1.2.2" "1.2.2" ${HEADERS} ${SRCS})

xmake_add_to_list_property(ROCKETCORE COMPILE_DEFINITIONS "RocketCore_EXPORTS")

xmake_project_link(ROCKETCORE FREETYPE)
target_link_libraries(RocketCore "-framework Cocoa" "-framework Carbon")

# Exportations
xmake_export_include_paths(ROCKETCORE ${INCLUDE_PATHS})
